--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "nodemon": "^2.0.22",
     "objects-to-csv": "^1.3.6",
     "postcss": "^8.4.22",
+    "random-org": "^2.2.0",
     "request-ip": "^3.3.0",
     "sass": "^1.62.1",
     "socket.io": "^4.6.2",
@@ -56,6 +57,8 @@
     "@types/express": "^4.17.17",
     "@types/gitignore-parser": "^0.0.0",
     "@types/jquery": "^3.5.16",
+    "@types/nodemailer": "^6.4.8",
+    "@types/objects-to-csv": "^1.3.1",
     "@types/sass": "^1.45.0",
     "@types/socket.io": "^3.0.2",
     "@types/uglify-js": "^3.17.1"
