--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "@types/objects-to-csv": "^1.3.1",
     "@types/sass": "^1.45.0",
     "@types/socket.io": "^3.0.2",
-    "@types/uglify-js": "^3.17.1"
+    "@types/uglify-js": "^3.17.1",
+    "cbs-bootstrap": "file:../custom-bootstrap"
   }
 }
