--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "request-ip": "^3.3.0",
     "sass": "^1.62.1",
     "socket.io": "^4.6.2",
+    "socket.io-client": "^4.7.0",
     "spamscanner": "^5.1.5",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.6",
@@ -65,6 +66,7 @@
     "@types/objects-to-csv": "^1.3.1",
     "@types/sass": "^1.45.0",
     "@types/socket.io": "^3.0.2",
+    "@types/socket.io-client": "^3.0.0",
     "@types/uglify-js": "^3.17.1",
     "cbs-bootstrap": "file:../custom-bootstrap"
   }
