--- a/package.json
+++ b/package.json
@@ -24,8 +24,9 @@
     "@gerhobbelt/gitignore-parser": "github:gerhobbelt/gitignore-parser",
     "@google-cloud/local-auth": "^2.1.1",
     "@total-typescript/ts-reset": "^0.4.2",
+    "@types/bootstrap": "^5.2.6",
     "@types/request-ip": "^0.0.38",
-    "@types/uuid": "^9.0.1",
+    "@types/uuid": "^9.0.2",
     "autoprefixer": "^10.4.14",
     "axios": "^1.4.0",
     "callsite": "^1.0.0",
@@ -53,7 +54,7 @@
     "spamscanner": "^5.1.5",
     "sqlite": "^4.1.2",
     "sqlite3": "^5.1.6",
-    "typescript": "^5.0.4",
+    "typescript": "^5.1.6",
     "uglify-js": "^3.17.4",
     "uuid": "^9.0.0"
   },
